msm8976-common: Add mDNIe Negative to device settings
Change-Id: Ib340fea508cb62e1393040cc20c7a95cf4bd1812

--- a/GTS2Parts/res/values/strings.xml
+++ b/GTS2Parts/res/values/strings.xml
@@ -19,6 +19,8 @@
 
     <string name="category_mdnie">MDNIE Scenario</string>
     <string name="mdnie_title">Scenario</string>
+    <string name="mdnie_negative_summary">Enable/disable inverted colors</string>
+    <string name="mdnie_negative_title">Negative mode</string>
 
     <string name="buttons_title">Buttons</string>
     <string name="swap_back_recents_summary"></string>
